Modernize codebase / deprecated code fixes